src/test/ui/coercion/coerce-reborrow-multi-arg-fail.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/coerce-reborrow-multi-arg-fail.rs:4:5
   |
LL |     test(&mut 7, &7);
   |     ^^^^^------^^^^^
   |          |
   |          expected `_`, found `&mut {integer}`
   |
note: function defined here
  --> $DIR/coerce-reborrow-multi-arg-fail.rs:1:4
   |
LL | fn test<T>(_a: T, _b: T) {}
   |    ^^^^    -----  -----
help: provide an argument of the correct type
   |
LL |     test(&mut 7, {&mut {integer}});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
